# E-opt

./: .gitignore  CMakeLists.txt  README.md  data.txt  randomTest0.mlir  randomTest1.mlir  randomTest3.mlir  randomTest6.mlir  randomTest8.mlir
e-opt/: CMakeLists.txt  e-opt.cpp
genTest/: data.txt  main.py  randomTest0.mlir  randomTest1.mlir  randomTest2.mlir  randomTest3.mlir  randomTest4.mlir  randomTest5.mlir  randomTest6.mlir  randomTest7.mlir  randomTest8.mlir  randomTest9.mlir
include/CodeGen/: MLIRGen.h
include/Conversion/: Passes.h
include/Dialect/Tosa/Transforms/: TosaCombine.h
include/Dialect/Toy/IR/: ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td  ToyTypes.h  ToyTypes.td
include/Dialect/Toy/Transforms/: CMakeLists.txt  EGraphPatternApplicator.h  OpEGraphRewritePattern.h  Passes.h  ShapeInferenceInterface.h
include/Dialect/Toy/Transforms/Utils/: EGraph.h
include/EGraph/: EGraph.h  EGraphPatternApplicator.h  OpEGraphRewritePattern.h
include/EGraph/Utils/: ENodeIterator.h  OpIterator.h
include/Frontend/: AST.h  Lexer.h  Parser.h
include/Toy/: AST.h  CMakeLists.txt  Parser.h  ShapeInferenceInterface.h  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td  ToyTypes.h  ToyTypes.td
include/Toy-c/: Dialects.h
lib/CAPI/: Dialects.cpp
lib/CodeGen/: MLIRGen.cpp
lib/Conversion/: LowerToAffineLoops.cpp  LowerToLLVM.cpp
lib/Dialect/Toy/IR/: CMakeLists.txt  ToyDialect.cpp  ToyOps.cpp  ToyTypes.cpp
lib/Dialect/Toy/Transforms/: CMakeLists.txt  EGraphCanonicalizer.cpp  EGraphPatternApplicator.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
lib/EGraph/: EGraph.cpp  EGraphCanonicalizer.cpp  EGraphPatternApplicator.cpp
lib/Frontend/: AST.cpp
lib/Toy/: CMakeLists.txt  ToyDialect.cpp  ToyOps.cpp  ToyTypes.cpp
lib/mlir/: LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
parser/: AST.cpp
python/: CMakeLists.txt  ToyExtension.cpp
python/mlir_toy/dialects/: ToyOps.td  toy.py
rewrite-test/Tosa/: randomTest0.mlir  randomTest1.mlir  randomTest4.mlir  randomTest5.mlir  randomTest6.mlir  test10_large.mlir  test11_associOfAdd.mlir  test2_tofs.mlir  test4_pofs.mlir  test5_sofp2.mlir  test8_associOfAdd.mlir  test9_associOfMatmul copy.mlir  test9_associOfMatmul.mlir
rewrite-test/Toy/: test1.toy
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  toy-capi-test.c
test/Tools/: dummy.mlir  toy-opt.mlir
test/Tosa/: test1.mlir  test2_soft.mlir  test3_tsoft.mlir  test5_sofp.mlir  test6_ewpofs.mlir  test7_sofewp.mlir
test/Toy/: toy-translate.mlir
test/python/: smoketest.py
toy-opt/: CMakeLists.txt  toy-opt.cpp
toy-translate/: CMakeLists.txt  toy-translate.cpp
toyc/: CMakeLists.txt  toyc.cpp
